--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.37.5",
+    "tailwindcss": "^3.4.17"
   }
 }
